# hello-world-cmake

./: CMakeLists.txt  README.md  main.c  version.h.in
